add feature extraction function

--- a/assignment_1_celeba_Model.ipynb
+++ b/assignment_1_celeba_Model.ipynb
@@ -4,7 +4,6 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -75,7 +74,6 @@
    "execution_count": 1,
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -124,7 +122,6 @@
    "execution_count": 3,
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -143,8 +140,6 @@
    "execution_count": 4,
    "metadata": {
     "button": false,
-    "collapsed": false,
-    "deletable": true,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -192,7 +187,6 @@
    "execution_count": 5,
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -252,7 +246,7 @@
     "        \n",
     "    return img_array\n",
     "\n",
-    "def image_loader_fname(fnames, res, grey=False):\n",
+    "def image_loader_fname(fnames, *res, grey=False, crop = False):\n",
     "    \"\"\"\n",
     "    Load Images by File Names\n",
     "\n",
@@ -291,7 +285,122 @@
     "                print(f\"Number of images imported: {i}, Time elapsed: {duration:.2f}\")\n",
     "        img_array = img_array.reshape(-1, 3*res[0]*res[1])\n",
     "            \n",
-    "    return img_array"
+    "    return img_array\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Feature extraction\n",
+    "\n",
+    "def find_vertex(all_img):\n",
+    "    \"\"\"\n",
+    "    find the average vertex of face, eyes, mouth and nose among all imgs\n",
+    "\n",
+    "    args:\n",
+    "    fnames: file names of the image to be loaded (a list)\n",
+    "    \n",
+    "    output: A dictionary in the form of {face:(x,y,h,w); nose:(x,y,h,w); mouth:(x,y,h,w), eyes:(x,y,h,w) }\n",
+    "    \"\"\"\n",
+    "    face_cascade = cv2.CascadeClassifier(\"HaarCascades/face.xml\")\n",
+    "    eye_cascade = cv2.CascadeClassifier(\"haarcascades/eye.xml\")\n",
+    "    nose_cascade = cv2.CascadeClassifier(\"haarcascades/nose.xml\")\n",
+    "    mouth_cascade = cv2.CascadeClassifier(\"haarcascades/mouth.xml\")\n",
+    "    face_found = []\n",
+    "    eyes_found = []\n",
+    "    nose_found = []\n",
+    "    mouth_found = []\n",
+    "    \n",
+    "    start = time.time()\n",
+    "    for k in range(all_img.shape[0]):\n",
+    "        #load image\n",
+    "        img = cv2.imread(os.path.join(path, all_img[k]))\n",
+    "        img = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "        faces = face_cascade.detectMultiScale(img)\n",
+    "        eyes = eye_cascade.detectMultiScale(img)\n",
+    "        nose = nose_cascade.detectMultiScale(img)\n",
+    "        mouth = mouth_cascade.detectMultiScale(img)\n",
+    "\n",
+    "        not_found = np.array([[np.nan]])\n",
+    "\n",
+    "        face_found.append(faces) if faces != () else face_found.append(not_found)\n",
+    "        eyes_found.append(eyes) if eyes != () else eyes_found.append(not_found)\n",
+    "        nose_found.append(nose) if nose != () else nose_found.append(not_found)\n",
+    "        mouth_found.append(mouth) if mouth != () else  mouth_found.append(not_found)\n",
+    "        \n",
+    "        if k % 1000 == 0:\n",
+    "                end = time.time()\n",
+    "                duration = end - start\n",
+    "                print(f\"Number of images extracted: {i}, Time elapsed: {duration:.2f}\")\n",
+    "    \n",
+    "    \n",
+    "    output = {}    \n",
+    "\n",
+    "    temp = [x[0] for x in onp.squeeze(face_found)]\n",
+    "    face_vertex = pd.DataFrame(temp)\n",
+    "    [x,y,h,w] = face_vertex.dropna().mean()\n",
+    "    output[\"face\"] = [x,y,h,w]\n",
+    "\n",
+    "    temp = [x[0] for x in onp.squeeze(nose_found)]\n",
+    "    nose_vertex = pd.DataFrame(temp)\n",
+    "    [x,y,h,w] = nose_vertex.dropna().mean()\n",
+    "    output[\"nose\"] = [x,y,h,w]\n",
+    "\n",
+    "    temp = [x[0] for x in onp.squeeze(eyes_found)]\n",
+    "    eyes_vertex = pd.DataFrame(temp)\n",
+    "    [x,y,h,w] = eyes_vertex.dropna().mean()\n",
+    "    output[\"eyes\"] = [x,y,h,w]\n",
+    "\n",
+    "    temp = [x[0] for x in onp.squeeze(mouth_found)]\n",
+    "    mouth_vertex = pd.DataFrame(temp)\n",
+    "    [x,y,h,w] = mouth_vertex.dropna().mean()\n",
+    "    output[\"mouth\"] = [x,y,h,w]\n",
+    "    \n",
+    "    return output\n",
+    "\n",
+    "\n",
+    "def image_area_loader(all_img,vertex,gray = False):\n",
+    "    \"\"\"\n",
+    "    Load Images by area(face, mouth, nose, eyes)\n",
+    "\n",
+    "    args:\n",
+    "    fnames: file names of the image to be loaded (a list)\n",
+    "    vertex: vertex (x,y,h,w) that the image to be loaded\n",
+    "    grey: boolean to decide whether loaded images are grey scaled. Default is False (color images)\n",
+    "    \"\"\"\n",
+    "    ceil = [math.ceil(v) for v in vertex ]\n",
+    "    [x,y,w,h] = ceil\n",
+    "    \n",
+    "    if gray == True:\n",
+    "        img_set= onp.zeros((size, h,w))\n",
+    "\n",
+    "        for k in range(all_img.shape[0]):\n",
+    "            im = imageio.imread(os.path.join(path, all_img[k])).astype(float)\n",
+    "            im = im[y:y+h,x:x+w,:]\n",
+    "            im = onp.mean(im, axis=2)\n",
+    "            img_set[k,:,:] = im\n",
+    "            \n",
+    "            if k % 1000 == 0:\n",
+    "                end = time.time()\n",
+    "                duration = end - start\n",
+    "                print(f\"Number of images imported: {i}, Time elapsed: {duration:.2f}\")\n",
+    "    else:\n",
+    "        img_set= onp.zeros((size, h,w,3))\n",
+    "\n",
+    "        for k in range(all_img.shape[0]):\n",
+    "            im = imageio.imread(os.path.join(path, all_img[k])).astype(float)\n",
+    "            im = im[y:y+h,x:x+w,:]\n",
+    "            img_set[k,:,:,:] = im\n",
+    "            \n",
+    "            if k % 1000 == 0:\n",
+    "                end = time.time()\n",
+    "                duration = end - start\n",
+    "                print(f\"Number of images imported: {i}, Time elapsed: {duration:.2f}\")\n",
+    "    \n",
+    "    return img_set"
    ]
   },
   {
@@ -1520,7 +1629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
