--- a/assignment_1_celeba_Model.ipynb
+++ b/assignment_1_celeba_Model.ipynb
@@ -43,35 +43,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# For Google Colaboratory\n",
-    "import sys, os\n",
-    "if 'google.colab' in sys.modules:\n",
-    "    # mount google drive\n",
-    "    from google.colab import drive\n",
-    "    drive.mount('/content/gdrive')\n",
-    "    print(path_to_file)\n",
-    "    # move to Google Drive directory\n",
-    "    os.chdir(path_to_file)\n",
-    "    !pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Google Colab import data: Much Faster to unzip files\n",
-    "\n",
-    "!unzip \"/content/gdrive/My Drive/DSA4212/datasets/img_celeba_small.zip\" -d \"/content\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -79,19 +50,7 @@
      "read_only": false
     }
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'dlib'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-22-7e9dbf758105>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mdlib\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mmatplotlib\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'dlib'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "from jax.config import config\n",
@@ -102,7 +61,7 @@
     "import jax.numpy as jnp\n",
     "import numpy as np\n",
     "\n",
-    "import pylab as plt\n",
+    "import matplotlib.pyplot as plt\n",
     "import imageio\n",
     "import os\n",
     "import numpy as onp\n",
@@ -131,7 +90,7 @@
     "#load attributes csv file\n",
     "path_csv  = \"D:\\\\Academics\\\\DSA\\\\4212\\\\datasets\" # Local Path (Change Here)\n",
     "# path_csv  = '/content/gdrive/My Drive/DSA4212/datasets' # Google Drive\n",
-    "attribute = pd.read_csv(os.path.join(path_csv, \"celeba.csv\"))\n"
+    "attribute = pd.read_csv(os.path.join(path_csv, \"celeba.csv\"))"
    ]
   },
   {
@@ -176,6 +135,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture --no-display\n",
+    "url = \"https://raw.githubusercontent.com/sightmachine/SimpleCV/master/SimpleCV/Features/HaarCascades/\"\n",
+    "facial_parts = ['face', 'eye', 'mouth', 'nose']\n",
+    "for p in facial_parts:\n",
+    "    p_file = p + '.xml'\n",
+    "    p_url = url + p_file\n",
+    "    !wget {p_url}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -187,9 +161,6 @@
    "execution_count": 4,
    "metadata": {
     "button": false,
-    "jupyter": {
-     "source_hidden": true
-    },
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -198,58 +169,6 @@
    },
    "outputs": [],
    "source": [
-    "# Image Loader\n",
-    "\n",
-    "# #let us load the first 500 images\n",
-    "# n_img = 500\n",
-    "# img_array = onp.zeros((n_img, 100,100))\n",
-    "# for k in range(n_img):\n",
-    "#     im = imageio.imread(os.path.join(path, all_img[k])).astype(float)\n",
-    "#     im = resize(im, (100,100) )\n",
-    "#     im = onp.mean(im, axis=2) # average the last channel\n",
-    "#     img_array[k,:,:] = im\n",
-    "    \n",
-    "def image_loader(indices, res, grey=False, verbose = 0):\n",
-    "    \"\"\"\n",
-    "    Load Images\n",
-    "\n",
-    "    args:\n",
-    "    indices: indices of the image to be loaded\n",
-    "    res: resolution of the image, an iterable of size 2\n",
-    "    grey: boolean to decide whether loaded images are grey scaled. Default is False (color images)\n",
-    "    verbose: Print time elapsed for every 1000 loaded images if verbose == 1, default 0\n",
-    "    \"\"\"\n",
-    "    start = time.time()\n",
-    "    if grey == True:\n",
-    "        img_array = onp.zeros((indices.size, res[0], res[1]))\n",
-    "        i = 0\n",
-    "        for k in indices:\n",
-    "            im = imageio.imread(os.path.join(path, all_img[k])).astype(float)\n",
-    "            im = resize(im, (res[0],res[1]) )\n",
-    "            im = onp.mean(im, axis=2) # average the last channel\n",
-    "            img_array[i,:,:] = im\n",
-    "            i += 1\n",
-    "            if verbose == 1 & i % 1000 == 0:\n",
-    "                end = time.time()\n",
-    "                duration = end - start\n",
-    "                print(f\"Number of images imported: {i}, Time elapsed: {duration:.2f}\")\n",
-    "        img_array = img_array.reshape(-1, res[0]*res[1])\n",
-    "    else:\n",
-    "        img_array = onp.zeros((indices.size, res[0], res[1], 3))\n",
-    "        i = 0\n",
-    "        for k in indices:\n",
-    "            im = imageio.imread(os.path.join(path, all_img[k])).astype(float)\n",
-    "            im = resize(im, (res[0],res[1]) )\n",
-    "            img_array[i,:,:,:] = im\n",
-    "            i += 1\n",
-    "            if verbose == 1 & i % 1000 == 0:\n",
-    "                end = time.time()\n",
-    "                duration = end - start\n",
-    "                print(f\"Number of images imported: {i}, Time elapsed: {duration:.2f}\")\n",
-    "        img_array = img_array.reshape(-1, 3*res[0]*res[1])\n",
-    "        \n",
-    "    return img_array\n",
-    "\n",
     "def image_loader_fname(fnames, res, grey=False, crop = False):\n",
     "    \"\"\"\n",
     "    Load Images by File Names\n",
@@ -294,11 +213,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -314,10 +230,10 @@
     "    \n",
     "    output: A dictionary in the form of {face:(x,y,h,w); nose:(x,y,h,w); mouth:(x,y,h,w), eyes:(x,y,h,w) }\n",
     "    \"\"\"\n",
-    "    face_cascade = cv2.CascadeClassifier(\"HaarCascades/face.xml\")\n",
-    "    eye_cascade = cv2.CascadeClassifier(\"haarcascades/eye.xml\")\n",
-    "    nose_cascade = cv2.CascadeClassifier(\"haarcascades/nose.xml\")\n",
-    "    mouth_cascade = cv2.CascadeClassifier(\"haarcascades/mouth.xml\")\n",
+    "    face_cascade = cv2.CascadeClassifier(\"face.xml\")\n",
+    "    eye_cascade = cv2.CascadeClassifier(\"eye.xml\")\n",
+    "    nose_cascade = cv2.CascadeClassifier(\"nose.xml\")\n",
+    "    mouth_cascade = cv2.CascadeClassifier(\"mouth.xml\")\n",
     "    face_found = []\n",
     "    eyes_found = []\n",
     "    nose_found = []\n",
@@ -414,11 +330,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -434,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -471,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -506,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -524,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -562,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -597,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -638,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,11 +637,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -821,11 +731,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -929,11 +836,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -1027,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -1135,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -1153,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1181,6 +1085,7 @@
     "            n = len(record.get(key))\n",
     "        y = record.get(key)[:n]\n",
     "        x = np.arange(n)\n",
+    "        plt.xticks(x)\n",
     "        plt.plot(x,\n",
     "                 y, \n",
     "                 \"-.\",\n",
@@ -1191,7 +1096,7 @@
     "    plt.xlabel(f'{key}'.split('_')[-1])\n",
     "    plt.ylabel(' '.join(f'{key}'.split('_')[:-1]))\n",
     "    plt.grid(True)\n",
-    "    plt.title(\"Summary of Results\")"
+    "    plt.title(\"Summary of Results\");"
    ]
   },
   {
@@ -1206,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1233,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1746,19 +1651,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'cv2' is not defined",
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'shape'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-21-22aa765f82c7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mvertex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfind_vertex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mall_img\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-5-2ef0cc1a4651>\u001b[0m in \u001b[0;36mfind_vertex\u001b[1;34m(all_img)\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[0moutput\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mA\u001b[0m \u001b[0mdictionary\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mform\u001b[0m \u001b[0mof\u001b[0m \u001b[1;33m{\u001b[0m\u001b[0mface\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mh\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m;\u001b[0m \u001b[0mnose\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mh\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m;\u001b[0m \u001b[0mmouth\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mh\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0meyes\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mh\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \"\"\"\n\u001b[1;32m---> 12\u001b[1;33m     \u001b[0mface_cascade\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mCascadeClassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"HaarCascades/face.xml\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m     \u001b[0meye_cascade\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mCascadeClassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"haarcascades/eye.xml\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[0mnose_cascade\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mCascadeClassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"haarcascades/nose.xml\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'cv2' is not defined"
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-23-22aa765f82c7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mvertex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfind_vertex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mall_img\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-6-d99d3b444def>\u001b[0m in \u001b[0;36mfind_vertex\u001b[1;34m(all_img)\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m     \u001b[0mstart\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m     \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mall_img\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     23\u001b[0m         \u001b[1;31m#load image\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m         \u001b[0mimg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mall_img\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'shape'"
      ]
     }
    ],
