--- a/assignment_1_celeba_Model.ipynb
+++ b/assignment_1_celeba_Model.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -412,14 +412,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Utility Functions for Basic Logistic Regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -437,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -475,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -510,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -551,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -731,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -836,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {
     "tags": []
    },
@@ -931,11 +934,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -1032,14 +1032,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Utility Functions for Plotting Graph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -1057,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1162,35 +1164,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 21,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of images imported: 1000, Time elapsed: 5.38\n",
-      "Number of images imported: 2000, Time elapsed: 10.92\n",
-      "Number of images imported: 3000, Time elapsed: 15.95\n",
-      "Number of images imported: 4000, Time elapsed: 20.94\n",
-      "Number of images imported: 5000, Time elapsed: 25.89\n",
-      "Number of images imported: 6000, Time elapsed: 30.92\n",
-      "Number of images imported: 7000, Time elapsed: 36.14\n",
-      "Number of images imported: 8000, Time elapsed: 41.32\n",
-      "Number of images imported: 9000, Time elapsed: 46.56\n",
-      "Number of images imported: 10000, Time elapsed: 51.88\n",
-      "Number of images imported: 11000, Time elapsed: 57.10\n",
-      "Number of images imported: 12000, Time elapsed: 62.42\n",
-      "Number of images imported: 13000, Time elapsed: 67.68\n",
-      "Number of images imported: 14000, Time elapsed: 73.05\n",
-      "Number of images imported: 15000, Time elapsed: 78.41\n",
-      "Number of images imported: 1000, Time elapsed: 5.68\n",
-      "Number of images imported: 2000, Time elapsed: 12.12\n",
-      "Number of images imported: 3000, Time elapsed: 18.06\n",
-      "Number of images imported: 4000, Time elapsed: 23.78\n",
-      "Number of images imported: 5000, Time elapsed: 30.05\n"
+     "ename": "NameError",
+     "evalue": "name 'image_loader_fname' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-21-86aeb39f64f4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mgrey\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mtrain_img_arr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mimage_loader_fname\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_img\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m200\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mres\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[0mtest_img_arr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mimage_loader_fname\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest_img\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mres\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'image_loader_fname' is not defined"
      ]
     }
    ],
@@ -1202,7 +1189,7 @@
     "res = [pixels, pixels]\n",
     "grey = False\n",
     "\n",
-    "train_img_arr = image_loader_fname(train_img, res, grey)\n",
+    "train_img_arr = image_loader_fname(train_img[:200], res, grey)\n",
     "test_img_arr = image_loader_fname(test_img, res, grey)"
    ]
   },
